--- a/index.html
+++ b/index.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Church of Man</title>
+    <!-- <link rel="icon" href="favicon.ico" type="image/x-icon"> -->
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <h1>Heeeelllo everybody!!! we are coming!!!</h1>
+    <main class="img-wrapper">
+      <img
+        src="./img/Church_Of_Man_Logo.jpg"
+        alt="The logo of Church of Man music Band"
+        class="logo"
+      />
+      <div class="logo-txt">
+        <h1>The music Band!!</h1>
+        <p>Coming Soon..</p>
+      </div>
+      <div class="social-media-wrapper">
+        <div class="social">
+          <a
+            href="https://www.youtube.com/channel/UCsBpdCYb3EJePPODbAUYVsA/featured"
+            target="_blank"
+          >
+            <!-- <img src="" alt="" /> -->
+            <p>YouTube</p>
+          </a>
+        </div>
+        <div class="social">
+          <a href="https://www.facebook.com/churchofmangr" target="_blank">
+            <!-- <img src="" alt="" /> -->
+            <p>Facebook</p>
+          </a>
+        </div>
+        <!-- <div class="social">
+          <a href="#">
+            <img src="" alt="" />
+            <p>Gmail</p>
+          </a>
+        </div> -->
+      </div>
+    </main>
   </body>
 </html>
